<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListingBOF">


    <TextView
        android:id="@+id/bof_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="180dp"
        android:text="@string/bof"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:backgroundTint="@drawable/button_text_color"
        android:onClick="onStartStopClicked"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/bof_title"
        app:layout_constraintTop_toTopOf="@+id/bof_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/persons_view"
        android:layout_width="367dp"
        android:layout_height="564dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_mock" />

    <Button
        android:id="@+id/add_mock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:onClick="onAddMockClicked"
        android:text="@string/add_mock"
        app:layout_constraintStart_toEndOf="@+id/start_stop_btn"
        app:layout_constraintTop_toBottomOf="@+id/bof_title" />

    <Spinner
        android:id="@+id/filter_spinner"
        android:layout_width="132dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/bof_title"
        app:layout_constraintTop_toTopOf="@+id/bof_title" />

</androidx.constraintlayout.widget.ConstraintLayout>